--- a/02_React-Pagination/src/index.css
+++ b/02_React-Pagination/src/index.css
@@ -4,13 +4,9 @@
   font-weight: 400;
 
   color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
+
   background-color: #242424;
 
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
 }
 
 a {
@@ -23,11 +19,11 @@ a:hover {
 }
 
 body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+  /* margin: 0; */
+  /* display: flex; */
+  /* place-items: center; */
+  /* min-width: 320px;
+  min-height: 100vh; */
 }
 
 h1 {
@@ -54,15 +50,24 @@ button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+.post-container {
+  width: 880px;
+  height: 170px;
+}
+
+img {
+  width: 150px;
+  height: 150px;
+  margin-left: 1rem;
+  border-radius: 10px;
+}
+
+.paginationContainer {
+  display: flex;
+  justify-content: center;
+}
+
+.page-btn {
+  margin-right: 20px;
+  cursor: pointer;
 }
